--- a/files/custom/Espo/Modules/RSS/Resources/i18n/en_US/DashletOptions.json
+++ b/files/custom/Espo/Modules/RSS/Resources/i18n/en_US/DashletOptions.json
@@ -1,6 +1,7 @@
 {
     "fields": {
-      "feed": "Feed URL"
+      "feed": "Feed URL",
+      "includeArticleDescription": "Include Article Description"
     },
     "options": {
       "mode": {}
