--- a/files/custom/Espo/Modules/RSS/Resources/i18n/en_US/DashletOptions.json
+++ b/files/custom/Espo/Modules/RSS/Resources/i18n/en_US/DashletOptions.json
@@ -1,10 +1,15 @@
 {
     "fields": {
       "feed": "Feed URL",
-      "includeArticleDescription": "Include Article Description"
+      "includeArticleDescription": "Include Article Description",
+      "timeSeparator": "Time Separator",
+      "dateFormat": "Date Format",
+      "timeFormat": "Time Format"
     },
     "options": {
-      "mode": {}
+      "mode": {
+        "System": "System Default"
+      }
     },
     "messages": {
     },
