--- a/files/custom/Espo/Modules/RSS/Resources/i18n/en_US/DashletOptions.json
+++ b/files/custom/Espo/Modules/RSS/Resources/i18n/en_US/DashletOptions.json
@@ -2,6 +2,7 @@
     "fields": {
       "feed": "Feed URL",
       "includeArticleDescription": "Include Article Description",
+      "includeArticleTime": "Include Article Time",
       "timeSeparator": "Time Separator",
       "dateFormat": "Date Format",
       "timeFormat": "Time Format",
