--- a/files/custom/Espo/Modules/RSS/Resources/i18n/it_IT/DashletOptions.json
+++ b/files/custom/Espo/Modules/RSS/Resources/i18n/it_IT/DashletOptions.json
@@ -2,6 +2,7 @@
     "fields": {
       "feed": "URL Feed",
       "includeArticleDescription": "Includi Descrizione Articolo",
+      "includeArticleTime": "Includi Orario Articolo",
       "timeSeparator": "Separatore Tempo",
       "dateFormat": "Formato Data",
       "timeFormat": "Formato Ora",
